--- a/package.json
+++ b/package.json
@@ -7,18 +7,24 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "all-site": "date && npm-run-all builda*",
     "builda-1": "date && yarn create redwood-app $npm_package_config_installDir",
-    "builda-22": "date && cd $npm_package_config_installDir && sudo yarn rw g page home /",
+    "builda-2": "date && cd $npm_package_config_installDir && sudo yarn rw g page home /",
     "builda-3": "date && cd $npm_package_config_installDir && sudo yarn rw g page about",
     "builda-4": "date && cd $npm_package_config_installDir && sudo yarn rw g layout blog",
     "builda-5": "date && cd $npm_package_config_installDir && sudo yarn rw db save create posts",
     "builda-6": "date && cd $npm_package_config_installDir && sudo yarn rw db up",
-    "builda-8": "date && cd $npm_package_config_installDir && sudo yarn rw g scaffold post",
-    "builda-9": "date && cd $npm_package_config_installDir && sudo yarn rw g cell BlogPosts",
-    "builda-10": "date && cd $npm_package_config_installDir && sudo yarn rw g page BlogPost",
-    "builda-11": "date && yarn rw g cell BlogPost"
+    "buildxa-7": "date && cd $npm_package_config_installDir && sudo yarn rw g scaffold post",
+    "builda-8": "date && cd $npm_package_config_installDir && sudo yarn rw g cell BlogPosts",
+    "builda-9": "date && cd $npm_package_config_installDir && sudo yarn rw g page BlogPost",
+    "builda-10": "date && cd $npm_package_config_installDir && sudo yarn rw g cell BlogPost",
+    "builda-11": "date && cd $npm_package_config_installDir && sudo yarn rw g component BlogPost",
+    "builda-12": "date && cd $npm_package_config_installDir && sudo yarn rw g page contact",
+    "builda-13": "date && cd $npm_package_config_installDir && sudo yarn rw db save create contact",
+    "builda-14": "date && cd $npm_package_config_installDir && sudo yarn rw g sdl contact",
+    "builda-15": "date && cd $npm_package_config_installDir && sudo yarn rw g deploy netlify",
+    "builda-16": "date && cd $npm_package_config_installDir && sudo yarn rw g auth netlify"
   },
   "config" : { 
-    "installDir" : "/home/connorstom/aprojects/redwoodblog4" 
+    "installDir" : "/home/connorstom/aprojects/redwoodblog2" 
   }, 
   "keywords": [],
   "author": "Thomas Connors <connors.tom@gmail.com> (https://github.com/coding-to-music)",
