--- a/package.json
+++ b/package.json
@@ -6,35 +6,40 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "all-site": "npm-run-all builda*",
-    "builda-1": "yarn create redwood-app $npm_package_config_installDir",
-    "builda-2": "cd $npm_package_config_installDir && vue add tailwind",
-    "builda-3": "cd $npm_package_config_installDir && npm run serve",
-    "builda-4": "Delete HelloWorld.vue from /src/components/HelloWorld.vue",
-    "builda-5": "Delete About.vue from /src/views/About.vue",
-    "builda-6": "Edit /src/App.vue so it contains the following code",
-    "builda-7": "Edit /src/views/Home.vue so it contains the code below",
-    "builda-8": "Edit /src/router/index.js to contain the following code",
-    "builda-9": "Create a new file in /src/components/site/header/Header.vue", 
-    "builda-10": "You will have to create the folders site/header",
-    "builda-11": "In Header.vue add the following code.",
-    "builda-12": "Edit /src/App.vue",
-    "builda-13": "##validate the header is visible",
-    "builda-14": "/src/components/blog/BlogRoll.vue",
-    "builda-15": "/src/components/blog/LatestPosts.vue",
-    "builda-16": "/src/components/blog/Post.vue",
-    "builda-17": "Edit the file /src/views/Home.vue", 
-    "builda-18": "Edit /src/App.vue",
-    "builda-19": "Edit /src/router/index.js",
-    "builda-20": "##everything should be working",
-    "builda-21": "#Updating the App to use the Composition API",
-    "builda-22": "create a new file /src/composables/blog/posts.js",
-    "builda-23": "Edit /src/components/blog/BlogRoll.vue",
-    "builda-24": "Edit /src/components/blog/LatestPosts.vue", 
-    "builda-25": "Edit /src/components/blog/Post.vue"
+    "buildYa-1": "cd .. && vue create $npm_package_config_appName",
+    "buildYa-2": "cd $npm_package_config_installDir && vue add tailwind",
+    "buildYa-3": "cd $npm_package_config_installDir && npm run serve",
+    "buildYa-3.1": "#echo works up to here",
+    "buildYa-4": "rm -rf $npm_package_config_installDir/src/components/HelloWorld.vue",
+    "buildYa-5": "rm -rf $npm_package_config_installDir/src/views/About.vue",
+    "buildxa-6": "Edit /src/App.vue so it contains the following code",
+    "buildxa-7": "Edit /src/views/Home.vue so it contains the code below",
+    "buildxa-8": "Edit /src/router/index.js to contain the following code",
+    "buildxa-9": "Create a new file in /src/components/site/header/Header.vue",
+    "buildxa-10": "You will have to create the folders site/header",
+    "buildYa-10.1": "mkdir $npm_package_config_installDir/src/components/site",
+    "buildYa-10.2": "mkdir $npm_package_config_installDir/src/components/site/header",
+    "buildxa-11": "In Header.vue add the following code.",
+    "buildxa-12": "Edit /src/App.vue",
+    "buildxa-13": "##validate the header is visible",
+    "buildxa-14": "/src/components/blog/BlogRoll.vue",
+    "buildxa-15": "/src/components/blog/LatestPosts.vue",
+    "buildxa-16": "/src/components/blog/Post.vue",
+    "buildxa-17": "Edit the file /src/views/Home.vue",
+    "buildxa-18": "Edit /src/App.vue",
+    "buildxa-19": "Edit /src/router/index.js",
+    "buildxa-20": "##everything should be working",
+    "buildxa-21": "#Updating the App to use the Composition API",
+    "buildxa-22": "create a new file /src/composables/blog/posts.js",
+    "buildxxa-4": "rm -rf $npm_package_config_installDir/src/components/HelloWorld.vue",
+    "buildxa-23": "Edit /src/components/blog/BlogRoll.vue",
+    "buildxa-24": "Edit /src/components/blog/LatestPosts.vue",
+    "buildxa-25": "Edit /src/components/blog/Post.vue"
   },
-  "config" : { 
-    "installDir" : "/home/connorstom/aprojects/vue3_composable1" 
-  }, 
+  "config": {
+    "appName": "vue_news",
+    "installDir": "/home/connorstom/aprojects/vue_news"
+  },
   "keywords": [],
   "author": "Thomas Connors <connors.tom@gmail.com> (https://github.com/coding-to-music)",
   "license": "MIT",
@@ -46,4 +51,3 @@
     "npm-run-all": "^4.1.5"
   }
 }
-
