--- a/package.json
+++ b/package.json
@@ -1,40 +1,42 @@
 {
-  "name": "br-build-redwood",
+  "name": "br-group1-part1-redwood",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "all-site": "npm-run-all builda*",
-    "buildYa-1": "cd .. && vue create $npm_package_config_appName",
-    "buildYa-2": "cd $npm_package_config_installDir && vue add tailwind",
-    "buildYa-3": "cd $npm_package_config_installDir && npm run serve",
-    "buildYa-3.1": "#echo works up to here",
-    "buildYa-4": "rm -rf $npm_package_config_installDir/src/components/HelloWorld.vue",
-    "buildYa-5": "rm -rf $npm_package_config_installDir/src/views/About.vue",
-    "buildxa-6": "Edit /src/App.vue so it contains the following code",
-    "buildxa-7": "Edit /src/views/Home.vue so it contains the code below",
-    "buildxa-8": "Edit /src/router/index.js to contain the following code",
-    "buildxa-9": "Create a new file in /src/components/site/header/Header.vue",
-    "buildxa-10": "You will have to create the folders site/header",
-    "buildYa-10.1": "mkdir $npm_package_config_installDir/src/components/site",
-    "buildYa-10.2": "mkdir $npm_package_config_installDir/src/components/site/header",
-    "buildxa-11": "In Header.vue add the following code.",
-    "buildxa-12": "Edit /src/App.vue",
-    "buildxa-13": "##validate the header is visible",
-    "buildxa-14": "/src/components/blog/BlogRoll.vue",
-    "buildxa-15": "/src/components/blog/LatestPosts.vue",
-    "buildxa-16": "/src/components/blog/Post.vue",
-    "buildxa-17": "Edit the file /src/views/Home.vue",
-    "buildxa-18": "Edit /src/App.vue",
-    "buildxa-19": "Edit /src/router/index.js",
-    "buildxa-20": "##everything should be working",
-    "buildxa-21": "#Updating the App to use the Composition API",
-    "buildxa-22": "create a new file /src/composables/blog/posts.js",
-    "buildxxa-4": "rm -rf $npm_package_config_installDir/src/components/HelloWorld.vue",
-    "buildxa-23": "Edit /src/components/blog/BlogRoll.vue",
-    "buildxa-24": "Edit /src/components/blog/LatestPosts.vue",
-    "buildxa-25": "Edit /src/components/blog/Post.vue"
+    "all-site": "npm-run-all group1-part1a*",
+    "group1-part1-Ya-1": "cd .. && vue create $npm_package_config_appName",
+    "group1-part1-Ya-2": "cd $npm_package_config_installDir && vue add tailwind",
+    "group1-part1-Ya-3": "cd $npm_package_config_installDir && npm run serve",
+    "group1-part1-Ya-4": "echo works up to here",
+    "group1-part1-Ya-5": "rm -rf $npm_package_config_installDir/src/components/HelloWorld.vue",
+    "group1-part1-Ya-6": "rm -rf $npm_package_config_installDir/src/views/About.vue",
+    "group1-part2-xa-1.0": "",
+    "group1-part2-xa-1": "wget -o /src/App.vue https://github.com/coding-to-music/vue3_composition_api/blob/main/src/App.vue",
+    "group1-part2-xa-2": "wget -o /src/views/Home.vue GitHub",
+    "group1-part2-xa-3": "wget -o /src/router/index.js GitHub",
+    "group1-part2-xa-4": "echo You will have to create the folders site/header",
+    "group1-part2-Ya-5": "mkdir $npm_package_config_installDir/src/components/site",
+    "group1-part2-Ya-6": "mkdir $npm_package_config_installDir/src/components/site/header",
+    "group1-part2-xa-7": "wget -o /src/components/site/header/Header.vue GitHub",
+    "group1-part2-xa-8": "wget -o /src/App.vue GitHub",
+    "group1-part2-xa-9": "echo validate the header is visible",
+    "group1-part3-xa-1.0": "",
+    "group1-part3-xa-1": "wget -o /src/components/blog/BlogRoll.vue GitHub",
+    "group1-part3-xa-2": "wget -o /src/components/blog/LatestPosts.vue GitHub",
+    "group1-part3-xa-3": "wget -o /src/components/blog/Post.vue GitHub",
+    "group1-part3-xa-4": "wget -o /src/views/Home.vue GitHub",
+    "group1-part3-xa-5": "wget -o /src/App.vue https://github.com/coding-to-music/vue3_composition_api/blob/main/src/App.vue",
+    "group1-part3-xa-6": "wget -o /src/router/index.js GitHub",
+    "group1-part3-xa-7": "echo everything should be working",
+    "group1-part4-xa-1.0": "",
+    "group1-part4-xa-1": "echo Updating the App to use the Composition API",
+    "group1-part4-xa-2": "wget -o /src/composables/blog/posts.js GitHub",
+    "group1-part4-xa-3": "rm -rf $npm_package_config_installDir/src/components/HelloWorld.vue",
+    "group1-part4-xa-4": "wget -o /src/components/blog/BlogRoll.vue https://github.com/coding-to-music/vue3_composition_api/blob/main/src/components/blog/BlogRoll.vue",
+    "group1-part4-xa-5": "wget -o /src/components/blog/LatestPosts.vue https://github.com/coding-to-music/vue3_composition_api/blob/main/src/components/blog/LatestPosts.vue",
+    "group1-part4-xa-6": "wget -o /src/components/blog/Post.vue https://raw.githubusercontent.com/coding-to-music/vue3_composition_api/main/src/components/blog/Post.vue"
   },
   "config": {
     "appName": "vue_news",
