--- a/package.json
+++ b/package.json
@@ -13,30 +13,30 @@
     "group1-part1-Ya-5": "rm -rf $npm_package_config_installDir/src/components/HelloWorld.vue",
     "group1-part1-Ya-6": "rm -rf $npm_package_config_installDir/src/views/About.vue",
     "group1-part2-xa-1.0": "",
-    "group1-part2-xa-1": "wget -o /src/App.vue https://github.com/coding-to-music/vue3_composition_api/blob/main/src/App.vue",
-    "group1-part2-xa-2": "wget -o /src/views/Home.vue GitHub",
-    "group1-part2-xa-3": "wget -o /src/router/index.js GitHub",
+    "group1-part2-xa-1": "wget -o /src/App.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
+    "group1-part2-xa-2": "wget -o /src/views/Home.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
+    "group1-part2-xa-3": "wget -o /src/router/index.js https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
     "group1-part2-xa-4": "echo You will have to create the folders site/header",
     "group1-part2-Ya-5": "mkdir $npm_package_config_installDir/src/components/site",
     "group1-part2-Ya-6": "mkdir $npm_package_config_installDir/src/components/site/header",
-    "group1-part2-xa-7": "wget -o /src/components/site/header/Header.vue GitHub",
-    "group1-part2-xa-8": "wget -o /src/App.vue GitHub",
+    "group1-part2-xa-7": "wget -o /src/components/site/header/Header.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
+    "group1-part2-xa-8": "wget -o /src/App.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
     "group1-part2-xa-9": "echo validate the header is visible",
     "group1-part3-xa-1.0": "",
-    "group1-part3-xa-1": "wget -o /src/components/blog/BlogRoll.vue GitHub",
-    "group1-part3-xa-2": "wget -o /src/components/blog/LatestPosts.vue GitHub",
-    "group1-part3-xa-3": "wget -o /src/components/blog/Post.vue GitHub",
-    "group1-part3-xa-4": "wget -o /src/views/Home.vue GitHub",
-    "group1-part3-xa-5": "wget -o /src/App.vue https://github.com/coding-to-music/vue3_composition_api/blob/main/src/App.vue",
-    "group1-part3-xa-6": "wget -o /src/router/index.js GitHub",
+    "group1-part3-xa-1": "wget -o /src/components/blog/BlogRoll.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
+    "group1-part3-xa-2": "wget -o /src/components/blog/LatestPosts.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
+    "group1-part3-xa-3": "wget -o /src/components/blog/Post.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
+    "group1-part3-xa-4": "wget -o /src/views/Home.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
+    "group1-part3-xa-5": "wget -o /src/App.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
+    "group1-part3-xa-6": "wget -o /src/router/index.js https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
     "group1-part3-xa-7": "echo everything should be working",
     "group1-part4-xa-1.0": "",
     "group1-part4-xa-1": "echo Updating the App to use the Composition API",
-    "group1-part4-xa-2": "wget -o /src/composables/blog/posts.js GitHub",
+    "group1-part4-xa-2": "wget -o /src/composables/blog/posts.js https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
     "group1-part4-xa-3": "rm -rf $npm_package_config_installDir/src/components/HelloWorld.vue",
-    "group1-part4-xa-4": "wget -o /src/components/blog/BlogRoll.vue https://github.com/coding-to-music/vue3_composition_api/blob/main/src/components/blog/BlogRoll.vue",
-    "group1-part4-xa-5": "wget -o /src/components/blog/LatestPosts.vue https://github.com/coding-to-music/vue3_composition_api/blob/main/src/components/blog/LatestPosts.vue",
-    "group1-part4-xa-6": "wget -o /src/components/blog/Post.vue https://raw.githubusercontent.com/coding-to-music/vue3_composition_api/main/src/components/blog/Post.vue"
+    "group1-part4-xa-4": "wget -o /src/components/blog/BlogRoll.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
+    "group1-part4-xa-5": "wget -o /src/components/blog/LatestPosts.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
+    "group1-part4-xa-6": "wget -o /src/components/blog/Post.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue"
   },
   "config": {
     "appName": "vue_news",
