--- a/package.json
+++ b/package.json
@@ -5,38 +5,45 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "all-site": "npm-run-all group1-part1a*",
-    "group1-part1-Ya-1": "cd .. && vue create $npm_package_config_appName",
-    "group1-part1-Ya-2": "cd $npm_package_config_installDir && vue add tailwind",
-    "group1-part1-Ya-3": "cd $npm_package_config_installDir && npm run serve",
-    "group1-part1-Ya-4": "echo works up to here",
-    "group1-part1-Ya-5": "rm -rf $npm_package_config_installDir/src/components/HelloWorld.vue",
-    "group1-part1-Ya-6": "rm -rf $npm_package_config_installDir/src/views/About.vue",
-    "group1-part2-xa-1.0": "",
-    "group1-part2-xa-1": "wget -o /src/App.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
-    "group1-part2-xa-2": "wget -o /src/views/Home.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
-    "group1-part2-xa-3": "wget -o /src/router/index.js https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
-    "group1-part2-xa-4": "echo You will have to create the folders site/header",
-    "group1-part2-Ya-5": "mkdir $npm_package_config_installDir/src/components/site",
-    "group1-part2-Ya-6": "mkdir $npm_package_config_installDir/src/components/site/header",
-    "group1-part2-xa-7": "wget -o /src/components/site/header/Header.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
-    "group1-part2-xa-8": "wget -o /src/App.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
-    "group1-part2-xa-9": "echo validate the header is visible",
+    "all-site": "npm-run-all group1-part2*",
+    "group1-partY1-a-1": "cd .. && vue create $npm_package_config_appName",
+    "group1-partY1-a-2": "cd $npm_package_config_installDir && vue add tailwind",
+    "group1-partY1-a-4": "echo you could do yarn serve and verify hello world is working",
+    "group1-partX1-a-4.1": "rimraf.sync($npm_package_config_installDir/src/components/HelloWorld.vue))",
+    "group1-partY1-Ya-5": "rm -rf $npm_package_config_installDir/src/components/HelloWorld.vue",
+    "group1-partY1-Ya-6": "rm -rf $npm_package_config_installDir/src/views/About.vue",
+    "group1-part2-xa-1.0": "echo begin part 2",
+    "group1-part2-xa-1.1": "cd $npm_package_config_installDir && pwd",
+    "group1-part2-xa-1.2": "rm -rf $npm_package_config_installDir/App.vue*",
+    "group1-part2-xa-1.3": "rm -rf $npm_package_config_installDir/src/App.vue",
+    "group1-part2-xa-1.4": "wget -o App.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
+    "group1-part2-xa-1.5": "ls -lat && ls -lat $npm_package_config_installDir/src",
+    "group1-part2-xa-4.0": "echo here",
+    "group1-part7-xa-2": "wget -o ./src/views/Home.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/views/Home.vue",
+    "group1-part7-xa-3": "wget -o ./src/router/index.js https://github.com/coding-to-music/vue3_composition_api/raw/main/src/router/index.js",
+    "group1-part7-xa-4.0": "",
+    "group1-part7-xa-4": "echo You will have to create the folders site/header",
+    "group1-part7-Ya-5": "mkdir $npm_package_config_installDir/src/components/site",
+    "group1-part7-Ya-6": "mkdir $npm_package_config_installDir/src/components/site/header",
+    "group1-part7-xa-7": "wget -o /src/components/site/header/Header.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/site/header/Header.vue",
+    "group1-part7-xa-8": "wget -o /src/App.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
+    "group1-part7-xa-9": "echo validate the header is visible",
     "group1-part3-xa-1.0": "",
-    "group1-part3-xa-1": "wget -o /src/components/blog/BlogRoll.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
-    "group1-part3-xa-2": "wget -o /src/components/blog/LatestPosts.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
-    "group1-part3-xa-3": "wget -o /src/components/blog/Post.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
-    "group1-part3-xa-4": "wget -o /src/views/Home.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
+    "group1-part3-xa-1": "wget -o /src/components/blog/BlogRoll.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/BlogRoll.vue",
+    "group1-part3-xa-2": "wget -o /src/components/blog/LatestPosts.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/LatestPosts.vue",
+    "group1-part3-xa-3": "wget -o /src/components/blog/Post.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/Post.vue",
+    "group1-part3-xa-4": "wget -o /src/views/Home.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/views/Home.vue",
     "group1-part3-xa-5": "wget -o /src/App.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
     "group1-part3-xa-6": "wget -o /src/router/index.js https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
     "group1-part3-xa-7": "echo everything should be working",
     "group1-part4-xa-1.0": "",
     "group1-part4-xa-1": "echo Updating the App to use the Composition API",
-    "group1-part4-xa-2": "wget -o /src/composables/blog/posts.js https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
-    "group1-part4-xa-3": "rm -rf $npm_package_config_installDir/src/components/HelloWorld.vue",
-    "group1-part4-xa-4": "wget -o /src/components/blog/BlogRoll.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
-    "group1-part4-xa-5": "wget -o /src/components/blog/LatestPosts.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
-    "group1-part4-xa-6": "wget -o /src/components/blog/Post.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue"
+    "group1-part4-xa-2": "rm -rf $npm_package_config_installDir/src/components/HelloWorld.vue",
+    "group1-part4-xa-3": "wget -o /src/components/blog/BlogRoll.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/BlogRoll.vue",
+    "group1-part4-xa-4": "wget -o /src/components/blog/LatestPosts.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/LatestPosts.vue",
+    "group1-part4-xa-5": "wget -o /src/components/blog/Post.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/Post.vue",
+    "group1-part4-xa-6": "wget -o /src/views/Home.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
+    "group1-part4-xa-7": "wget -o /src/App.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue"
   },
   "config": {
     "appName": "vue_news",
@@ -49,7 +56,8 @@
     "chalk": "^2.4.2",
     "gently-copy": "^3.2.0",
     "live-server": "^1.2.1",
-    "onchange": "^7.1.0"
+    "onchange": "^7.1.0",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
