--- a/package.json
+++ b/package.json
@@ -4,49 +4,53 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "js-add": "node add.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "all-site": "npm-run-all group1-part*",
-    "group1-par-tY1-a-1": "cd .. && vue create $npm_package_config_appName",
-    "group1-par-tY1-a-2": "cd $npm_package_config_installDir && vue add tailwind",
-    "group1-par-tY1-a-4": "echo you could do yarn serve and verify hello world is working",
-    "group1-par-tX1-a-4.1": "rimraf.sync($npm_package_config_installDir/src/components/HelloWorld.vue))",
-    "group1-par-tY1-Ya-5": "rm -rf $npm_package_config_installDir/src/components/HelloWorld.vue",
-    "group1-par-tY1-Ya-6": "rm -rf $npm_package_config_installDir/src/views/About.vue",
-    "group1-part2-xa-1.0": "echo begin part 2",
-    "group1-part2-xa-1.1": "cd $npm_package_config_installDir && pwd",
-    "group1-par-t2-xa-1.2": "rm -rf $npm_package_config_installDir/App.vue*",
-    "group1-par-t2-xa-1.3": "rm -rf $npm_package_config_installDir/src/App.vue",
-    "group1-part2-xa-1.4": "wget -nv -O $npm_package_config_installDir/src/App.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
-    "group1-par-t2-xa-1.5": "ls -lat && ls -lat $npm_package_config_installDir/src",
-    "group1-part2-xa-1.6": "echo here",
-    "group1-part7-xa-1.7": "mkdir -p $npm_package_config_installDir/src/views",
-    "group1-part7-xa-2": "wget -nv -O $npm_package_config_installDir/src/views/Home.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/views/Home.vue",
-    "group1-part7-xa-2.5": "mkdir -p $npm_package_config_installDir/src/router",
-    "group1-part7-xa-3": "wget -nv -O $npm_package_config_installDir/src/router/index.js https://github.com/coding-to-music/vue3_composition_api/raw/main/src/router/index.js",
-    "group1-part7-xa-4.0": "echo view it or something",
-    "group1-part7-xa-4": "echo You will have to create the folders site/header",
-    "group1-part7-Ya-5": "mkdir -p $npm_package_config_installDir/src/components/site",
-    "group1-part7-Ya-6": "mkdir -p $npm_package_config_installDir/src/components/site/header",
-    "group1-part7-xa-7": "wget -nv -O $npm_package_config_installDir/src/components/site/header/Header.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/site/header/Header.vue",
-    "group1-part7-xa-8": "wget -nv -O $npm_package_config_installDir/src/App.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
-    "group1-part7-xa-9": "echo validate the header is visible",
-    "group1-part3-xa-1.0": "echo really someone should look at this thing",
-    "group1-part3-Ya-1.2": "mkdir -p $npm_package_config_installDir/src/components/blog",
-    "group1-part3-xa-1": "wget -nv -O $npm_package_config_installDir/src/components/blog/BlogRoll.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/BlogRoll.vue",
-    "group1-part3-xa-2": "wget -nv -O $npm_package_config_installDir/src/components/blog/LatestPosts.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/LatestPosts.vue",
-    "group1-part3-xa-3": "wget -nv -O $npm_package_config_installDir/src/components/blog/Post.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/Post.vue",
-    "group1-part3-xa-4": "wget -nv -O $npm_package_config_installDir/src/views/Home.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/views/Home.vue",
-    "group1-part3-xa-5": "wget -nv -O $npm_package_config_installDir/src/App.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
-    "group1-part3-xa-6": "wget -nv -O $npm_package_config_installDir/src/router/index.js https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
-    "group1-part3-xa-7": "echo everything should be working",
-    "group1-part4-xa-1.0": "echo ok now someone look at it",
-    "group1-part4-xa-1": "echo Updating the App to use the Composition API",
-    "group1-par-t4-xa-2": "rm -rf $npm_package_config_installDir/src/components/HelloWorld.vue",
-    "group1-part4-xa-3": "wget -nv -O $npm_package_config_installDir/src/components/blog/BlogRoll.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/BlogRoll.vue",
-    "group1-part4-xa-4": "wget -nv -O $npm_package_config_installDir/src/components/blog/LatestPosts.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/LatestPosts.vue",
-    "group1-part4-xa-5": "wget -nv -O $npm_package_config_installDir/src/components/blog/Post.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/Post.vue",
-    "group1-part4-xa-6": "wget -nv -O $npm_package_config_installDir/src/views/Home.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
-    "group1-part4-xa-7": "wget -nv -O  $npm_package_config_installDir/src/App.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue"
+    "group1-part1-1.0": "rm -rf $npm_package_config_installDir",
+    "group1-part1-2.0": "cd .. && vue create $npm_package_config_appName",
+    "group1-part1-3.0": "cd $npm_package_config_installDir && vue add tailwind minimal",
+    "group1-part1-4.0": "echo you could do yarn serve and verify hello world is working",
+    "group1-part1-4.1": "echo you could halt here",
+    "group1-part1-5.0": "rm -rf $npm_package_config_installDir/src/components/HelloWorld.vue",
+    "group1-part1-6.0": "rm -rf $npm_package_config_installDir/src/views/About.vue",
+    "group1-part2-1.0": "echo begin part 2",
+    "group1-part2-1.1": "cd $npm_package_config_installDir && pwd",
+    "group1-part2-1.2": "rm -rf $npm_package_config_installDir/App.vue*",
+    "group1-part2-1.3": "rm -rf $npm_package_config_installDir/src/App.vue",
+    "group1-part2-1.4": "wget -nv -O $npm_package_config_installDir/src/App.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
+    "group1-part2-1.5": "ls -lat && ls -lat $npm_package_config_installDir/src",
+    "group1-part3-1.0": "mkdir -p $npm_package_config_installDir/src/views",
+    "group1-part3-2": "wget -nv -O $npm_package_config_installDir/src/views/Home.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/views/Home.vue",
+    "group1-part3-3": "mkdir -p $npm_package_config_installDir/src/router",
+    "group1-part3-4": "wget -nv -O $npm_package_config_installDir/src/router/index.js https://github.com/coding-to-music/vue3_composition_api/raw/main/src/router/index.js",
+    "group1-part3-5": "echo view it or something",
+    "group1-part3-6": "echo You will have to create the folders site/header",
+    "group1-part3-7": "mkdir -p $npm_package_config_installDir/src/components/site",
+    "group1-part3-8": "mkdir -p $npm_package_config_installDir/src/components/site/header",
+    "group1-part3-9": "wget -nv -O $npm_package_config_installDir/src/components/site/header/Header.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/site/header/Header.vue",
+    "group1-part3-10": "wget -nv -O $npm_package_config_installDir/src/App.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
+    "group1-part3-11": "echo validate the header is visible",
+    "group1-part4-1.0": "echo really someone should look at this thing",
+    "group1-part4-1.1": "mkdir -p $npm_package_config_installDir/src/composables",
+    "group1-part4-1.2": "mkdir -p $npm_package_config_installDir/src/composables/blog",
+    "group1-part4-1.3": "wget -nv -O $npm_package_config_installDir/src/composables/blog/posts.js https://github.com/coding-to-music/vue3_composition_api/raw/main/src/composables/blog/posts.js",
+    "group1-part4-1.4": "mkdir -p $npm_package_config_installDir/src/components/blog",
+    "group1-part4-1.5": "wget -nv -O $npm_package_config_installDir/src/components/blog/BlogRoll.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/BlogRoll.vue",
+    "group1-part4-2": "wget -nv -O $npm_package_config_installDir/src/components/blog/LatestPosts.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/LatestPosts.vue",
+    "group1-part4-3": "wget -nv -O $npm_package_config_installDir/src/components/blog/Post.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/Post.vue",
+    "group1-part4-4": "wget -nv -O $npm_package_config_installDir/src/views/Home.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/views/Home.vue",
+    "group1-part4-5": "wget -nv -O $npm_package_config_installDir/src/App.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
+    "group1-part4-6": "wget -nv -O $npm_package_config_installDir/src/router/index.js https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
+    "group1-part4-7": "echo everything should be working",
+    "group1-part5-1.0": "echo ok now someone look at it",
+    "group1-part5-1": "echo Updating the App to use the Composition API",
+    "group1-part5-2": "rm -rf $npm_package_config_installDir/src/components/HelloWorld.vue",
+    "group1-part5-3": "wget -nv -O $npm_package_config_installDir/src/components/blog/BlogRoll.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/BlogRoll.vue",
+    "group1-part5-4": "wget -nv -O $npm_package_config_installDir/src/components/blog/LatestPosts.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/LatestPosts.vue",
+    "group1-part5-5": "wget -nv -O $npm_package_config_installDir/src/components/blog/Post.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/Post.vue",
+    "group1-part5-6": "wget -nv -O $npm_package_config_installDir/src/views/Home.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
+    "group1-part5-7": "wget -nv -O  $npm_package_config_installDir/src/App.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue"
   },
   "config": {
     "appName": "vue_news",
@@ -59,8 +63,7 @@
     "chalk": "^2.4.2",
     "gently-copy": "^3.2.0",
     "live-server": "^1.2.1",
-    "onchange": "^7.1.0",
-    "rimraf": "^3.0.2"
+    "onchange": "^7.1.0"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
