refactor build variables

--- a/package.json
+++ b/package.json
@@ -18,43 +18,51 @@
     "group1-part2-1.1": "cd $npm_package_config_installDir && pwd",
     "group1-part2-1.2": "rm -rf $npm_package_config_installDir/App.vue*",
     "group1-part2-1.3": "rm -rf $npm_package_config_installDir/src/App.vue",
-    "group1-part2-1.4": "wget -nv -O $npm_package_config_installDir/src/App.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
+    "group1-part2-1.4": "wget -nv -O $npm_package_config_installDir/src/App.vue $npm_package_config_build1/src/App.vue",
     "group1-part2-1.5": "ls -lat && ls -lat $npm_package_config_installDir/src",
     "group1-part3-1.0": "mkdir -p $npm_package_config_installDir/src/views",
-    "group1-part3-2": "wget -nv -O $npm_package_config_installDir/src/views/Home.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/views/Home.vue",
+    "group1-part3-2": "wget -nv -O $npm_package_config_installDir/src/views/Home.vue $npm_package_config_build1/src/views/Home.vue",
     "group1-part3-3": "mkdir -p $npm_package_config_installDir/src/router",
-    "group1-part3-4": "wget -nv -O $npm_package_config_installDir/src/router/index.js https://github.com/coding-to-music/vue3_composition_api/raw/main/src/router/index.js",
+    "group1-part3-4": "wget -nv -O $npm_package_config_installDir/src/router/index.js $npm_package_config_build1/src/router/index.js",
     "group1-part3-5": "echo view it or something",
     "group1-part3-6": "echo You will have to create the folders site/header",
     "group1-part3-7": "mkdir -p $npm_package_config_installDir/src/components/site",
     "group1-part3-8": "mkdir -p $npm_package_config_installDir/src/components/site/header",
-    "group1-part3-9": "wget -nv -O $npm_package_config_installDir/src/components/site/header/Header.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/site/header/Header.vue",
-    "group1-part3-10": "wget -nv -O $npm_package_config_installDir/src/App.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
+    "group1-part3-9": "wget -nv -O $npm_package_config_installDir/src/components/site/header/Header.vue $npm_package_config_build1/src/components/site/header/Header.vue",
+    "group1-part3-10": "wget -nv -O $npm_package_config_installDir/src/App.vue $npm_package_config_build1/src/App.vue",
     "group1-part3-11": "echo validate the header is visible",
     "group1-part4-1.0": "echo really someone should look at this thing",
     "group1-part4-1.1": "mkdir -p $npm_package_config_installDir/src/composables",
     "group1-part4-1.2": "mkdir -p $npm_package_config_installDir/src/composables/blog",
-    "group1-part4-1.3": "wget -nv -O $npm_package_config_installDir/src/composables/blog/posts.js https://github.com/coding-to-music/vue3_composition_api/raw/main/src/composables/blog/posts.js",
+    "group1-part4-1.3": "wget -nv -O $npm_package_config_installDir/src/composables/blog/posts.js $npm_package_config_build1/src/composables/blog/posts.js",
     "group1-part4-1.4": "mkdir -p $npm_package_config_installDir/src/components/blog",
-    "group1-part4-1.5": "wget -nv -O $npm_package_config_installDir/src/components/blog/BlogRoll.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/BlogRoll.vue",
-    "group1-part4-2": "wget -nv -O $npm_package_config_installDir/src/components/blog/LatestPosts.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/LatestPosts.vue",
-    "group1-part4-3": "wget -nv -O $npm_package_config_installDir/src/components/blog/Post.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/Post.vue",
-    "group1-part4-4": "wget -nv -O $npm_package_config_installDir/src/views/Home.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/views/Home.vue",
-    "group1-part4-5": "wget -nv -O $npm_package_config_installDir/src/App.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
-    "group1-part4-6": "wget -nv -O $npm_package_config_installDir/src/router/index.js https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
+    "group1-part4-1.5": "wget -nv -O $npm_package_config_installDir/src/components/blog/BlogRoll.vue $npm_package_config_build1/src/components/blog/BlogRoll.vue",
+    "group1-part4-2": "wget -nv -O $npm_package_config_installDir/src/components/blog/LatestPosts.vue $npm_package_config_build1/src/components/blog/LatestPosts.vue",
+    "group1-part4-3": "wget -nv -O $npm_package_config_installDir/src/components/blog/Post.vue $npm_package_config_build1/src/components/blog/Post.vue",
+    "group1-part4-4": "wget -nv -O $npm_package_config_installDir/src/views/Home.vue $npm_package_config_build1/src/views/Home.vue",
+    "group1-part4-5": "wget -nv -O $npm_package_config_installDir/src/App.vue $npm_package_config_build1/src/App.vue",
+    "group1-part4-6": "wget -nv -O $npm_package_config_installDir/src/router/index.js $npm_package_config_build1/src/App.vue",
     "group1-part4-7": "echo everything should be working",
     "group1-part5-1.0": "echo ok now someone look at it",
-    "group1-part5-1": "echo Updating the App to use the Composition API",
+    "group1-part5-1": "halt echo Updating the App to use the Composition API",
     "group1-part5-2": "rm -rf $npm_package_config_installDir/src/components/HelloWorld.vue",
-    "group1-part5-3": "wget -nv -O $npm_package_config_installDir/src/components/blog/BlogRoll.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/BlogRoll.vue",
-    "group1-part5-4": "wget -nv -O $npm_package_config_installDir/src/components/blog/LatestPosts.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/LatestPosts.vue",
-    "group1-part5-5": "wget -nv -O $npm_package_config_installDir/src/components/blog/Post.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/components/blog/Post.vue",
-    "group1-part5-6": "wget -nv -O $npm_package_config_installDir/src/views/Home.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue",
-    "group1-part5-7": "wget -nv -O  $npm_package_config_installDir/src/App.vue https://github.com/coding-to-music/vue3_composition_api/raw/main/src/App.vue"
+    "group1-part5-3": "wget -nv -O $npm_package_config_installDir/src/components/blog/BlogRoll.vue $npm_package_config_build1/src/components/blog/BlogRoll.vue",
+    "group1-part5-4": "wget -nv -O $npm_package_config_installDir/src/components/blog/LatestPosts.vue $npm_package_config_build1/src/components/blog/LatestPosts.vue",
+    "group1-part5-5": "wget -nv -O $npm_package_config_installDir/src/components/blog/Post.vue $npm_package_config_build1/src/components/blog/Post.vue",
+    "group1-part5-6": "wget -nv -O $npm_package_config_installDir/src/views/Home.vue $npm_package_config_build1/src/App.vue",
+    "group1-part5-7": "wget -nv -O  $npm_package_config_installDir/src/App.vue $npm_package_config_build1/src/App.vue"
   },
   "config": {
-    "appName": "vue_news",
-    "installDir": "/home/connorstom/aprojects/vue_news"
+    "build4Name": "webpack bundle analyzer",
+    "build4": "https://github.com/coding-to-music/vue3_composition_api/blob/861697cba24826560cee782b67203e569a3de05a/",
+    "build3Name": "final",
+    "build3": "https://github.com/coding-to-music/vue3_composition_api/blob/42162f5744e5ca15feb7a5afa431b9b418c4684d/",
+    "build2Name": "first",
+    "build2": "https://github.com/coding-to-music/vue3_composition_api/blob/d1de6581b730fb6a3492c0e1475421750ea13cbe/",
+    "build1Name": "first commit",
+    "build1": "https://github.com/coding-to-music/vue3_composition_api/blob/4c75c24553cc827a1e87f5004888452315e4281c/",
+    "installDir": "/home/connorstom/aprojects/vue_news",
+    "appName": "vue_news"
   },
   "keywords": [],
   "author": "Thomas Connors <connors.tom@gmail.com> (https://github.com/coding-to-music)",
