works thru group 5

--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "group0-part1-1.0": "rm -rf $npm_package_config_installDir",
     "group0-part2-2.1": "cd .. && mkdir $npm_package_config_installDir",
     "group0-part2-2.2": "cd $npm_package_config_installDir && go mod init $npm_package_config_repoName",
-    "group0-part3-3.1": "wget -nv -O $npm_package_config_installDir/server.go $npm_package_config_build3/hello-world.go.example",
+    "group0-part3-3.1": "wget -nv -O $npm_package_config_installDir/server.go $npm_package_config_hello1/server.go",
     "group0-part3-3.2": "cd $npm_package_config_installDir && pwd && ls -lat",
     "group0-part3-3.3": "cd $npm_package_config_installDir && echo $npm_package_config_installDir",
-    "group0-part3-3.4": "wget -nv -O $npm_package_config_installDir/server.go $npm_package_config_raw3/server.go",
+    "group0-part3-3.4": "wget -nv -O $npm_package_config_installDir/server.go $npm_package_config_hello1/server.go",
     "group0-part3-3.5": "cd $npm_package_config_installDir && go run $npm_package_config_installDir/server.go &",
     "group0-part3-3.6": "echo end part 3",
 
-    "group0-part4-4.1": "wget -nv -O $npm_package_config_installDir/main.go $npm_package_config_raw3/main.go",
+    "group0-part4-4.1": "wget -nv -O $npm_package_config_installDir/main.go $npm_package_config_hello1/main.go",
     "group0-part4-4.2": "cd $npm_package_config_installDir && go run $npm_package_config_installDir/main.go &",
     "group0-part4-4.3": "echo end part 4",
 
@@ -30,8 +30,8 @@
     "group0-part5-5.6": "echo '/frontend/node_modules' >> $npm_package_config_installDir/.gitignore",
 
     "group0-part5-5.7.0": "echo need correct blog commit for App.vue and index.html",
-    "group0-part5-5.7": "wget -nv -O $npm_package_config_installDir/frontend/App.vue $npm_package_config_app53/frontend/src/App.vue",
-    "group0-part5-5.8": "wget -nv -O $npm_package_config_installDir/frontend/App.vue $npm_package_config_index58/frontend/public/index.html",
+    "group0-part5-5.7": "wget -nv -O $npm_package_config_installDir/frontend/App.vue $npm_package_config_hello1/App.vue",
+    "group0-part5-5.8": "wget -nv -O $npm_package_config_installDir/frontend/App.vue $npm_package_config_hello1/index.html",
     "group0-part5-5.9": "cd $npm_package_config_installDir/frontend && yarn serve &",
     "group0-part5-5.10": "echo $npm_package_config_installDir/frontend and then yarn serve",
     "group0-part5-5.11": "echo end part 5",
@@ -81,23 +81,8 @@
   },
   "config": {
     "build5Name": "otherVueApp",
-    "raw1": "https://raw.githubusercontent.com/coding-to-music/go-vue-thumbnail/",
-    "raw2": "https://raw.githubusercontent.com/coding-to-music/vue3_composition_api/blob/4c75c24553cc827a1e87f5004888452315e4281c",
-    "raw3": "https://raw.githubusercontent.com/coding-to-music/go-vue-thumbnail/e7eb02d8f2796819f4a4b4e08e8489793f8398d5",
-    "helloWorld": "https://raw.githubusercontent.com/coding-to-music/go-vue-snapshot2/cf30cee216a00b1038c6d3f0cba6f848a0a29c9c",
-    "app53": "https://raw.githubusercontent.com/coding-to-music/go-vue-snapshot2/cf30cee216a00b1038c6d3f0cba6f848a0a29c9c",
-    "index56": "https://raw.githubusercontent.com/coding-to-music/go-vue-snapshot2/cf30cee216a00b1038c6d3f0cba6f848a0a29c9c",
-
-    "build5": "https://github.com/coding-to-music/vue3_composition_api/blob/4c75c24553cc827a1e87f5004888452315e4281c",
-    "build1": "https://github.com/coding-to-music/vue3_composition_api/blob/4c75c24553cc827a1e87f5004888452315e4281c",
-    "build4Name": "",
-    "build4": "https://github.com/coding-to-music/go-vue-thumbnail/blob/XXX/",
-    "build3Name": "main branch",
-    "build3": "https://github.com/coding-to-music/go-vue-thumbnail/blob/main/",
-    "build2Name": "not perfect",
-    "build2": "https://github.com/coding-to-music/go-vue-thumbnail/blob/e7eb02d8f2796819f4a4b4e08e8489793f8398d5/",
-    "build1Name": "first commit",
-    "buildx": "https://github.com/coding-to-music/go-vue-thumbnail/blob/7f6feeae17f6d9f05f2023439f0bbab1550f8d53/",
+    "hello1": "https://raw.githubusercontent.com/coding-to-music/go-vue-sourcefiles/e29e20ef6e2607f74f7ee914a8413d0c6f3550a1/hello-world",
+    "thumb1": "https://raw.githubusercontent.com/coding-to-music/go-vue-sourcefiles/e29e20ef6e2607f74f7ee914a8413d0c6f3550a1/go-thumbnail",
     "appName": "go-vue-snapshot",
     "installDir": "/home/connorstom/aprojects/go-vue-snapshot",
     "repoName": "github.com/coding-to-music/go-vue-thumbnail"
